--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>DigiMedia SEO Template 3 variations by TemplateMo</title>
+    <title>DigiMedia Andy Agency</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +51,7 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-12">
           <img src="assets/images/logo-v1.png" alt="">
-          <h1>DigiMedia HTML5 Template</h1>
+          <h1>DigiMedia Andy Agency</h1>
           <h4>Please choose one of the three variations below.</h4>
           <div class="first-button scroll-to-section">
             <a href="#demos">Choose Demo</a>
@@ -92,7 +92,7 @@ https://templatemo.com/tm-568-digimedia
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2022 DigiMedia Co., Ltd. All Rights Reserved. 
+          <p>Copyright © 2024 DigiMedia Andy Agency. All Rights Reserved. 
           <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
         </div>
       </div>
