--- a/indexx.html
+++ b/indexx.html
@@ -16,17 +16,17 @@
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
     <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/themify-icons.css" rel="stylesheet" />
-    <link href="assets/css/flaticon-set.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/animate.css" rel="stylesheet" />
-    <link href="assets/css/bootsnav.css" rel="stylesheet" />
+    <link href="assetss/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assetss/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="assetss/css/themify-icons.css" rel="stylesheet" />
+    <link href="assetss/css/flaticon-set.css" rel="stylesheet" />
+    <link href="assetss/css/magnific-popup.css" rel="stylesheet" />
+    <link href="assetss/css/owl.carousel.min.css" rel="stylesheet" />
+    <link href="assetss/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="assetss/css/animate.css" rel="stylesheet" />
+    <link href="assetss/css/bootsnav.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet" />
+    <link href="assetss/css/responsive.css" rel="stylesheet" />
     <!-- ========== End Stylesheet ========== -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -986,24 +986,24 @@
 
     <!-- jQuery Frameworks
     ============================================= -->
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/equal-height.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/modernizr.custom.13711.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/wow.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/progresscircle.js"></script>
-    <script src="assets/js/bootsnav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assetss/js/jquery-1.12.4.min.js"></script>
+    <script src="assetss/js/popper.min.js"></script>
+    <script src="assetss/js/bootstrap.min.js"></script>
+    <script src="assetss/js/equal-height.min.js"></script>
+    <script src="assetss/js/jquery.appear.js"></script>
+    <script src="assetss/js/jquery.easing.min.js"></script>
+    <script src="assetss/js/jquery.magnific-popup.min.js"></script>
+    <script src="assetss/js/modernizr.custom.13711.js"></script>
+    <script src="assetss/js/owl.carousel.min.js"></script>
+    <script src="assetss/js/wow.min.js"></script>
+    <script src="assetss/js/progress-bar.min.js"></script>
+    <script src="assetss/js/isotope.pkgd.min.js"></script>
+    <script src="assetss/js/imagesloaded.pkgd.min.js"></script>
+    <script src="assetss/js/count-to.js"></script>
+    <script src="assetss/js/YTPlayer.min.js"></script>
+    <script src="assetss/js/progresscircle.js"></script>
+    <script src="assetss/js/bootsnav.js"></script>
+    <script src="assetss/js/main.js"></script>
 
 </body>
 </html>
