--- a/indexx.html
+++ b/indexx.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Digilab - SEO & Digital Marketing Agency Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Digilab - SEO & Digital Marketing Agency Template</title>
+    <title>DigiMedia Andy Agency</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -49,7 +49,7 @@
             <div class="ring">
                 <span></span>
             </div>
-            <h2>Digilab</h2>
+            <h2>DigiMedia Andy Agency</h2>
         </div>
     </div>
     <!-- Preloader Ends -->
@@ -94,7 +94,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="assetss/img/logo.png" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -195,14 +195,14 @@
     ============================================= -->
     <div class="banner-area with-fixed-nav">
         <div class="shape-right-bottom shape opacity-default">
-            <img src="assets/img/shape/13.png" alt="Shape">
+            <img src="assetss/img/shape/13.png" alt="Shape">
         </div>
         <div class="container">
             <div class="double-items">
                 <div class="row align-center">
 
                     <div class="col-lg-6 order-last thumb width-130 wow fadeInRight" data-wow-duration="1s">
-                        <img src="assets/img/illustration/2.png" alt="Thumb">
+                        <img src="assetss/img/illustration/2.png" alt="Thumb">
                     </div>
 
                     <div class="col-lg-6 info">
@@ -224,7 +224,7 @@
     <div class="features-area default-padding-bottom">
         <!-- Fixed Shape  -->
         <div class="shape-left-top shape opacity-01">
-            <img src="assets/img/shape/4.png" alt="Shape">
+            <img src="assetss/img/shape/4.png" alt="Shape">
         </div>
         <!-- Fixed Shape  -->
         <div class="container">
@@ -285,7 +285,7 @@
         <div class="container">
             <div class="row align-center">
                 <div class="col-lg-6 thumb wow fadeInLeft">
-                    <img src="assets/img/illustration/7.png" alt="Thumb">
+                    <img src="assetss/img/illustration/7.png" alt="Thumb">
                 </div>
                 <div class="col-lg-6 info wow fadeInUp" data-wow-delay="0.5s">
                     <h2>We Offer a Full Range of <br> <strong>Digital Marketing</strong> Services!</h2>
@@ -329,7 +329,7 @@
     <div class="services-area carousel-shadow bg-gray default-padding-top">
         <!-- Fixed Shape  -->
         <div class="shape-bottom">
-            <img src="assets/img/shape/1.svg" alt="Shape">
+            <img src="assetss/img/shape/1.svg" alt="Shape">
         </div>
         <!-- Fixed Shape  -->
         <div class="container">
@@ -438,7 +438,7 @@
                 <div class="row align-center">
 
                     <div class="col-lg-6 thumb wow fadeInLeft">
-                        <img src="assets/img/illustration/3.png" alt="Thumb">
+                        <img src="assetss/img/illustration/3.png" alt="Thumb">
                     </div>
 
                     <div class="col-lg-6 info wow fadeInUp">
@@ -499,7 +499,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item  wow fadeInUp" data-wow-delay="400ms">
                             <div class="thumb">
-                                <img src="assets/img/case/1.jpg" alt="Thumb">
+                                <img src="assetss/img/case/1.jpg" alt="Thumb">
                                 <div class="overlay">
                                     <a href="#"><i class="fas fa-link"></i></a>
                                 </div>
@@ -521,7 +521,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item  wow fadeInUp" data-wow-delay="500ms">
                             <div class="thumb">
-                                <img src="assets/img/case/2.jpg" alt="Thumb">
+                                <img src="assetss/img/case/2.jpg" alt="Thumb">
                                 <div class="overlay">
                                     <a href="#"><i class="fas fa-link"></i></a>
                                 </div>
@@ -543,7 +543,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item  wow fadeInUp" data-wow-delay="600ms">
                             <div class="thumb">
-                                <img src="assets/img/case/6.jpg" alt="Thumb">
+                                <img src="assetss/img/case/6.jpg" alt="Thumb">
                                 <div class="overlay">
                                     <a href="#"><i class="fas fa-link"></i></a>
                                 </div>
@@ -571,7 +571,7 @@
     ============================================= -->
     <div class="clients-area text-light bg-gradient default-padding-mx">
         <!-- Fixed BG -->
-        <div class="fixed-bg" style="background-image: url(assets/img/map.svg);"></div>
+        <div class="fixed-bg" style="background-image: url(assetss/img/map.svg);"></div>
         <!-- Fixed BG -->
         <div class="container">
             <div class="row align-center">
@@ -581,19 +581,19 @@
                 <div class="col-lg-7">
                     <div class="clients-carousel owl-carousel owl-theme">
                         <div class="item">
-                            <img src="assets/img/clients/01.png" alt="Thumb">
+                            <img src="assetss/img/clients/01.png" alt="Thumb">
                         </div>
                         <div class="item">
-                            <img src="assets/img/clients/02.png" alt="Thumb">
+                            <img src="assetss/img/clients/02.png" alt="Thumb">
                         </div>
                         <div class="item">
-                            <img src="assets/img/clients/03.png" alt="Thumb">
+                            <img src="assetss/img/clients/03.png" alt="Thumb">
                         </div>
                         <div class="item">
-                            <img src="assets/img/clients/04.png" alt="Thumb">
+                            <img src="assetss/img/clients/04.png" alt="Thumb">
                         </div>
                         <div class="item">
-                            <img src="assets/img/clients/05.png" alt="Thumb">
+                            <img src="assetss/img/clients/05.png" alt="Thumb">
                         </div>
                     </div>
                 </div>
@@ -601,7 +601,7 @@
         </div>
         <!-- Fixed Shape -->
         <div class="shape-bottom">
-            <img src="assets/img/shape/8.png" alt="Shape">
+            <img src="assetss/img/shape/8.png" alt="Shape">
         </div>
         <!-- Fixed Shape -->
     </div>
@@ -612,7 +612,7 @@
     <div class="pricing-area default-padding-top">
         <!-- Fixed Shape  -->
         <div class="shape-right-bottom">
-            <img src="assets/img/shape/9.png" alt="Shape">
+            <img src="assetss/img/shape/9.png" alt="Shape">
         </div>
         <!-- Fixed Shape  -->
         <div class="container">
@@ -715,10 +715,10 @@
                 <div class="row align-center">
                     <div class="col-lg-5 wow fadeInLeft">
                         <div class="client-thumb">
-                            <img src="assets/img/team/1.jpg" alt="Thumb">
-                            <img src="assets/img/team/2.jpg" alt="Thumb">
-                            <img src="assets/img/team/3.jpg" alt="Thumb">
-                            <img src="assets/img/team/7.jpg" alt="Thumb">
+                            <img src="assetss/img/team/1.jpg" alt="Thumb">
+                            <img src="assetss/img/team/2.jpg" alt="Thumb">
+                            <img src="assetss/img/team/3.jpg" alt="Thumb">
+                            <img src="assetss/img/team/7.jpg" alt="Thumb">
                         </div>
                     </div>
                     <div class="col-lg-6 offset-lg-1 testimonial-content wow fadeInRight">
@@ -779,7 +779,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="600ms">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/5.jpg" alt="Thumb"></a>
+                                <a href="#"><img src="assetss/img/blog/5.jpg" alt="Thumb"></a>
                             </div>
                             <div class="info">
                                 <div class="tags">
@@ -804,7 +804,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="600ms">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/2.jpg" alt="Thumb"></a>
+                                <a href="#"><img src="assetss/img/blog/2.jpg" alt="Thumb"></a>
                             </div>
                             <div class="info">
                                 <div class="tags">
@@ -829,7 +829,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="600ms">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/3.jpg" alt="Thumb"></a>
+                                <a href="#"><img src="assetss/img/blog/3.jpg" alt="Thumb"></a>
                             </div>
                             <div class="info">
                                 <div class="tags">
@@ -869,7 +869,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="assetss/img/logo-light.png" alt="Logo">
                             <div class="address">
                                 <ul>
                                     <li>
