--- a/indexx.html
+++ b/indexx.html
@@ -85,7 +85,7 @@
                         <li class="language-switcher">
                             <div class="dropdown">
                                 <button class="dropdown-toggle" type="button" data-toggle="dropdown">
-                                    <img src="assets/img/lan-eng.png" alt="Flag">
+                                    <img src="assetss/img/lan-eng.png" alt="Flag">
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">English</a></li>
@@ -105,7 +105,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo-eastern-blue.png" class="logo" alt="Logo">
+                        <img src="assetss/img/logo-eastern-blue.png" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -206,7 +206,7 @@
     ============================================= -->
     <div class="banner-area with-fixed-nav heading-capitalized bg-gray-hard">
         <div class="shape-left-bottom">
-            <img src="assets/img/shape/bg-1.png" alt="Shape">
+            <img src="assetss/img/shape/bg-1.png" alt="Shape">
         </div>
         <div class="container">
             <div class="double-items">
@@ -218,9 +218,9 @@
                     </div>
                     <div class="col-lg-5 thumb width-120 wow fadeInRight" data-wow-duration="1s">
                         <div class="thumb-innner">
-                            <img src="assets/img/illustration/12.png" alt="Thumb">
+                            <img src="assetss/img/illustration/12.png" alt="Thumb">
                             <div class="icon">
-                                <img class="item-animated" src="assets/img/illustration/speed-icon.png" alt="Icon">
+                                <img class="item-animated" src="assetss/img/illustration/speed-icon.png" alt="Icon">
                             </div>
                         </div>
                     </div>
@@ -334,14 +334,14 @@
     <div class="about-area default-padding-bottom">
         <!-- Fixed Shape  -->
         <div class="shape-left-top shape opacity-default">
-            <img src="assets/img/shape/4.png" alt="Shape">
+            <img src="assetss/img/shape/4.png" alt="Shape">
         </div>
         <!-- Fixed Shape  -->
         <div class="container">
             <div class="about-items">
                 <div class="row">
                     <div class="col-lg-6 wow fadeInLeft thumb">
-                        <img src="assets/img/illustration/14.png" alt="Thumb">
+                        <img src="assetss/img/illustration/14.png" alt="Thumb">
                     </div>
                     <div class="col-lg-6 info wow fadeInUp">
                         <h5>About Us</h5>
@@ -479,7 +479,7 @@
     <div class="benifits-area bg-gray default-padding">
         <!-- Fixed Shape -->
         <div class="shape-top">
-            <img src="assets/img/shape/10.png" alt="Shape">
+            <img src="assetss/img/shape/10.png" alt="Shape">
         </div>
         <!-- Fixed Shape -->
         <div class="container">
@@ -507,7 +507,7 @@
                     <a class="btn circle btn-md btn-gradient eastern-blue">Get Started Now</a>
                 </div>
                 <div class="col-lg-6 wow fadeInDown thumb">
-                    <img src="assets/img/illustration/3.png" alt="Thumb">
+                    <img src="assetss/img/illustration/3.png" alt="Thumb">
                 </div>
             </div>
         </div>
@@ -535,7 +535,7 @@
                     <div class="single-item col-lg-3 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="500ms">
                             <div class="thumb">
-                                <img src="assets/img/team/1.jpg" alt="Thumb">
+                                <img src="assetss/img/team/1.jpg" alt="Thumb">
                             </div>
                             <div class="info">
                                 <span>Senior Marketer</span>
@@ -552,7 +552,7 @@
                     <div class="single-item col-lg-3 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="600ms">
                             <div class="thumb">
-                                <img src="assets/img/team/2.jpg" alt="Thumb">
+                                <img src="assetss/img/team/2.jpg" alt="Thumb">
                             </div>
                             <div class="info">
                                 <span>Sales Manager</span>
@@ -569,7 +569,7 @@
                     <div class="single-item col-lg-3 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="700ms">
                             <div class="thumb">
-                                <img src="assets/img/team/3.jpg" alt="Thumb">
+                                <img src="assetss/img/team/3.jpg" alt="Thumb">
                             </div>
                             <div class="info">
                                 <span>Data Analyst</span>
@@ -586,7 +586,7 @@
                     <div class="single-item col-lg-3 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="800ms">
                             <div class="thumb">
-                                <img src="assets/img/team/4.jpg" alt="Thumb">
+                                <img src="assetss/img/team/4.jpg" alt="Thumb">
                             </div>
                             <div class="info">
                                 <span>Managing Director</span>
@@ -610,7 +610,7 @@
     <div class="case-studies-area circle-shape-right default-padding-top bg-gray bottom-less">
         <!-- Fixed Shape  -->
         <div class="shape-bottom">
-            <img src="assets/img/shape/1.svg" alt="Shape">
+            <img src="assetss/img/shape/1.svg" alt="Shape">
         </div>
         <!-- Fixed Shape  -->
         <div class="container">
@@ -629,7 +629,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item  wow fadeInUp" data-wow-delay="400ms">
                             <div class="thumb">
-                                <img src="assets/img/case/1.jpg" alt="Thumb">
+                                <img src="assetss/img/case/1.jpg" alt="Thumb">
                                 <div class="overlay">
                                     <a href="#"><i class="fas fa-link"></i></a>
                                 </div>
@@ -651,7 +651,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item  wow fadeInUp" data-wow-delay="500ms">
                             <div class="thumb">
-                                <img src="assets/img/case/2.jpg" alt="Thumb">
+                                <img src="assetss/img/case/2.jpg" alt="Thumb">
                                 <div class="overlay">
                                     <a href="#"><i class="fas fa-link"></i></a>
                                 </div>
@@ -673,7 +673,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item  wow fadeInUp" data-wow-delay="600ms">
                             <div class="thumb">
-                                <img src="assets/img/case/6.jpg" alt="Thumb">
+                                <img src="assetss/img/case/6.jpg" alt="Thumb">
                                 <div class="overlay">
                                     <a href="#"><i class="fas fa-link"></i></a>
                                 </div>
@@ -735,7 +735,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="500ms">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/5.jpg" alt="Thumb"></a>
+                                <a href="#"><img src="assetss/img/blog/5.jpg" alt="Thumb"></a>
                             </div>
                             <div class="info">
                                 <div class="tags">
@@ -763,7 +763,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="600ms">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/2.jpg" alt="Thumb"></a>
+                                <a href="#"><img src="assetss/img/blog/2.jpg" alt="Thumb"></a>
                             </div>
                             <div class="info">
                                 <div class="tags">
@@ -791,7 +791,7 @@
                     <div class="single-item col-lg-4 col-md-6">
                         <div class="item wow fadeInUp" data-wow-delay="700ms">
                             <div class="thumb">
-                                <a href="#"><img src="assets/img/blog/3.jpg" alt="Thumb"></a>
+                                <a href="#"><img src="assetss/img/blog/3.jpg" alt="Thumb"></a>
                             </div>
                             <div class="info">
                                 <div class="tags">
@@ -834,7 +834,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="assetss/img/logo-light.png" alt="Logo">
                             <div class="address">
                                 <ul>
                                     <li>
