--- a/indexx.html
+++ b/indexx.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Digilab - SEO & Digital Marketing Agency Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Digilab - SEO & Digital Marketing Agency Template</title>
+    <title>DigiMedia Andy Agency</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -239,19 +239,19 @@
                 <div class="col-lg-7">
                     <div class="clients-carousel owl-carousel owl-theme">
                         <div class="item">
-                            <img src="assets/img/clients/1.png" alt="Thumb">
+                            <img src="assetss/img/clients/1.png" alt="Thumb">
                         </div>
                         <div class="item">
-                            <img src="assets/img/clients/2.png" alt="Thumb">
+                            <img src="assetss/img/clients/2.png" alt="Thumb">
                         </div>
                         <div class="item">
-                            <img src="assets/img/clients/3.png" alt="Thumb">
+                            <img src="assetss/img/clients/3.png" alt="Thumb">
                         </div>
                         <div class="item">
-                            <img src="assets/img/clients/4.png" alt="Thumb">
+                            <img src="assetss/img/clients/4.png" alt="Thumb">
                         </div>
                         <div class="item">
-                            <img src="assets/img/clients/5.png" alt="Thumb">
+                            <img src="assetss/img/clients/5.png" alt="Thumb">
                         </div>
                     </div>
                 </div>
@@ -927,7 +927,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Copyright &copy;  2020. Designed by <a href="#">validtemplatess</a></p>
+                        <p>Copyright &copy;  2024. Designed by <a href="#">DigiMedia Andy Agency</a></p>
                     </div>
                     <div class="col-md-6 text-right link">
                         <ul>
