--- a/indexx.html
+++ b/indexx.html
@@ -48,7 +48,7 @@
             <div class="ring">
                 <span></span>
             </div>
-            <h2>Digilab</h2>
+            <h2>06 MEDIA</h2>
         </div>
     </div>
     <!-- Preloader Ends -->
