--- a/indexx.html
+++ b/indexx.html
@@ -105,7 +105,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assetss/img/logo-eastern-blue.png" class="logo" alt="Logo">
+                        <img src="assetss/img/logo.png" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
