--- a/indexx.html
+++ b/indexx.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Digilab - SEO & Digital Marketing Agency Template">
 
     <!-- ========== Page Title ========== -->
-    <title>DigiMedia Andy Agency</title>
+    <title>06 MEDIA</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -704,7 +704,7 @@
             <div class="sebscribe-items wow fadeInUp">
                 <div class="row">
                     <div class="col-lg-6 offset-lg-3 form">
-                        <h2>Try Digilab free for <strong>14 days</strong></h2>
+                        <h2>Try 06 MEDIA<strong>14 days</strong></h2>
                         <form action="#">
                             <input type="email" placeholder="Enter your email" class="form-control" name="email">
                             <button type="submit">Get Started</button>  
@@ -927,7 +927,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Copyright &copy;  2024. Designed by <a href="#">DigiMedia Andy Agency</a></p>
+                        <p>Copyright &copy;  2024. Designed by <a href="#">06 MEDIA</a></p>
                     </div>
                     <div class="col-md-6 text-right link">
                         <ul>
