--- a/indexx.html
+++ b/indexx.html
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-lg-5 thumb width-120 wow fadeInRight" data-wow-duration="1s">
                         <div class="thumb-innner">
-                            <img src="assetss/img/illustration/12.png" alt="Thumb">
+                            <img src="assetss/img/illustration/Webeditor.jpg" alt="Thumb">
                             <div class="icon">
                                 <img class="item-animated" src="assetss/img/illustration/speedy222.png" alt="Icon">
                             </div>
