--- a/indexx.html
+++ b/indexx.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Digilab - SEO & Digital Marketing Agency Template">
+    <meta name="description" content="06Media - SEO & Digital Marketing Agency ">
 
     <!-- ========== Page Title ========== -->
     <title>06 MEDIA</title>
