--- a/index.html
+++ b/index.html
@@ -373,13 +373,13 @@
       </div>
       <div style="justify-content:center" class="portfolio_container layout_padding2">
         <div class="box-1">
-          <div class="img-box b-1">
+          <div style="border-radius: 20px;" class="img-box b-1">
             <video src="images/Steaak.mp4" autoplay muted loop class="responsive-video"></video>
             <div class="btn-box">
               <a href="" class="btn-1"></a>
             </div>
           </div>
-          <div class="img-box b-2">
+          <div style="border-radius: 20px;" class="img-box b-2">
             <video src="images/carpacc.mp4" autoplay muted loop class="responsive-video"></video>
             <div class="btn-box">
               <a href="" class="btn-1"></a>
@@ -388,7 +388,7 @@
         </div>
         <div class="box-2">
           <div class="box-2-top">
-            <div class="img-box b-3">
+            <div style="border-radius: 20px;" class="img-box b-3">
               <video src="images/C0005_6.mp4" autoplay muted loop class="responsive-video"></video>
               <div class="btn-box">
                 <a href="" class="btn-1"></a>
@@ -396,7 +396,7 @@
             </div>
           </div>
           <div class="box-2-top2">
-            <div class="img-box b-4">
+            <div style="border-radius: 20px;" class="img-box b-4">
               <video src="images/C0005_2.mp4" autoplay muted loop class="responsive-video"></video>
               <div class="btn-box">
                 <a href="" class="btn-1"></a>
@@ -404,13 +404,13 @@
             </div>
           </div>
           <div class="box-2-btm">
-            <div class="img-box b-5">
+            <div style="border-radius: 20px;" class="img-box b-5">
               <video src="images/bak.mp4" autoplay muted loop class="responsive-video"></video>
               <div class="btn-box">
                 <a href="" class="btn-1"></a>
               </div>
             </div>
-            <div class="img-box b-6">
+            <div style="border-radius: 20px;" class="img-box b-6">
               <video src="images/C0005_3.mp4" autoplay muted loop class="responsive-video"></video>
               <div class="btn-box">
                 <a href="" class="btn-1"></a>
